# circleci-python-coverage

./: .coveragerc  setup.cfg  tests.nix
.circleci/: config.yml  finish-coverage-report  mergelcov.py  slipcover  slipcover2lcov.py
nix/: sources.json
src/circleci_python_coverage/: windows.py
src/circleci_python_coverage/tests/: test_it.py
