[metadata]
name = circleci_python_coverage
version = 2022.05.13
description = A minimal Python project that collects coverage measurements from its test suite.
keywords = development, coverage
license = Apache 2.0
classifiers =
    Programming Language :: Python :: 3.9
author = PrivateStorage.io, LLC
maintainer = PrivateStorage.io, LLC
home-page = https://github.com/PrivateStorage/circleci-python-coverage
author-email = support@private.storage
platform = POSIX

[options]
install_requires =
 		 # nothing
package_dir =
    	    =src
packages =
	 circleci_python_coverage
	 circleci_python_coverage.tests

[options.extras_require]
test =
    coverage
    slipcover
